Bytte ut radioknapper med knapper

--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -174,7 +174,7 @@ permalink: "/produktoversikt/"
                       {{ product.data.title | safe }}
                     </h2>
                     {# <p class="text-base">{{ product.data.ingress }}</p> #}
-                    <p class="text-base opacity-80">
+                    <p class="pr-12 text-base opacity-80">
                       {% for item in product.data.type %}
                         <span>{{ item }}</span>,
                       {% endfor %}
