--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -91,13 +91,22 @@ permalink: "/produktoversikt/"
             <span>Søk eller velg type og område</span>
           </button>
 
-          <div class="fixed inset-0 z-50 grid items-end grid-cols-layout lg:hidden" x-show="filterDrawer" x-bind:class="filterDrawer && 'animate-blur'">
-            <form class="grid bg-white shadow-drawer rounded-t-2xl col-content -mx-clamp-gap md:-mx-6 lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false" x-on:submit.prevent="filterDrawer = false">
-              <div class="pb-12 overflow-y-auto overscroll-y-contain px-clamp-gap md:px-6 max-h-[60vh]">
-                <div class="relative grid pt-clamp-gap md:pt-7" >
+          <div
+            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md lg:hidden"
+            x-show="filterDrawer"
+            x-transition:enter="transition ease-out duration-300"
+            x-transition:enter-start="translate-x-full opacity-0"
+            x-transition:enter-end="translate-x-0 opacity-100"
+            x-transition:leave="transition ease-in duration-300"
+            x-transition:leave-start="translate-x-0 opacity-100"
+            x-transition:leave-end="translate-x-full opacity-0"
+          >
+            <form class="flex flex-col h-full bg-white shadow-drawer col-content lg:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
+              <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
+                <div class="relative grid pt-6" >
                   <div>
                     <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-                    <div class="relative">
+                    <div class="relative mt-1">
                     <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
                       {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
                     </span>
@@ -119,16 +128,30 @@ permalink: "/produktoversikt/"
                 </div>
               </div>
               <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
-              <div class="py-4 px-clamp-gap md:px-6 bg-gray-50">
+              <div class="px-6 py-4 bg-gray-50">
                 <button class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
               </div>
             </form>
           </div>
+          <button
+            type="button"
+            class="fixed inset-0 z-40 bg-black/25"
+            x-show="filterDrawer"
+            x-on:click="filterDrawer = false"
+            x-transition:enter="transition ease-out duration-200"
+            x-transition:enter-start="opacity-0"
+            x-transition:enter-end="opacity-100"
+            x-transition:leave="transition ease-in duration-200"
+            x-transition:leave-start="opacity-100"
+            x-transition:leave-end="opacity-0"
+          >
+            <span class="sr-only">Lukk</span>
+          </button>
 
           <div class="hidden lg:block">
             <div class="-mt-1">
               <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-              <div class="relative mt-2">
+              <div class="relative mt-1">
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
                   {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
                 </span>
