--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -116,14 +116,12 @@ permalink: "/produktoversikt/"
                   {{ filterGroup({
                     array: collections.areaFilter,
                     title: 'Velg område',
-                    xModel: 'areaFilter',
-                    inputName: 'filter-area-mobile'
+                    value: 'areaFilter'
                   }) }}
                   {{ filterGroup({
                     array: collections.typeFilter,
                     title: 'Velg type',
-                    xModel: 'typeFilter',
-                    inputName: 'filter-type-mobile'
+                    value: 'typeFilter'
                   }) }}
                 </div>
               </div>
@@ -161,14 +159,12 @@ permalink: "/produktoversikt/"
             {{ filterGroup({
               array: collections.areaFilter,
               title: 'Velg område',
-              xModel: 'areaFilter',
-              inputName: 'filter-area-desktop'
+              value: 'areaFilter'
             }) }}
             {{ filterGroup({
               array: collections.typeFilter,
               title: 'Velg type',
-              xModel: 'typeFilter',
-              inputName: 'filter-type-desktop'
+              value: 'typeFilter'
             }) }}
           </div>
         </div>
