--- a/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/produktoversikt/samarbeidspartner/samarbeidspartner.njk
@@ -113,14 +113,12 @@ permalink: '/produktoversikt-samarbeidspartner/'
                   {{ filterGroup({
                     array: roleFilter,
                     title: 'Velg rolle',
-                    xModel: 'roleFilter',
-                    inputName: 'filter-role-mobile'
+                    value: 'roleFilter'
                   }) }}
                   {{ filterGroup({
                     array: typeFilter,
                     title: 'Velg type',
-                    xModel: 'typeFilter',
-                    inputName: 'filter-type-mobile'
+                    value: 'typeFilter'
                   }) }}
                 </div>
               </div>
@@ -158,14 +156,12 @@ permalink: '/produktoversikt-samarbeidspartner/'
             {{ filterGroup({
               array: roleFilter,
               title: 'Velg rolle',
-              xModel: 'roleFilter',
-              inputName: 'filter-role-desktop'
+              value: 'roleFilter'
             }) }}
             {{ filterGroup({
               array: typeFilter,
               title: 'Velg type',
-              xModel: 'typeFilter',
-              inputName: 'filter-type-desktop'
+              value: 'typeFilter'
             }) }}
           </div>
         </div>
