--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -113,14 +113,12 @@ permalink: '/produktoversikt-arbeidsgiver/'
                   {{ filterGroup({
                     array: areaFilter,
                     title: 'Velg område',
-                    xModel: 'areaFilter',
-                    inputName: 'filter-area-mobile'
+                    value: 'areaFilter'
                   }) }}
                   {{ filterGroup({
                     array: typeFilter,
                     title: 'Velg type',
-                    xModel: 'typeFilter',
-                    inputName: 'filter-type-mobile'
+                    value: 'typeFilter'
                   }) }}
                 </div>
               </div>
@@ -158,14 +156,12 @@ permalink: '/produktoversikt-arbeidsgiver/'
             {{ filterGroup({
               array: areaFilter,
               title: 'Velg område',
-              xModel: 'areaFilter',
-              inputName: 'filter-area-desktop'
+              value: 'areaFilter'
             }) }}
             {{ filterGroup({
               array: typeFilter,
               title: 'Velg type',
-              xModel: 'typeFilter',
-              inputName: 'filter-type-desktop'
+              value: 'typeFilter'
             }) }}
           </div>
         </div>
