--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,14 +1,14 @@
 {% macro button(params) %}
 
-  {% set buttonClasses = "bg-white border-2 border-blue-500 text-blue-600" %}
+  {% set buttonClasses = "bg-white border-2 border-blue-500 text-blue-600 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" %}
 
   {% if params.variant %}
     {% if params.variant === "primary" %}
-      {% set variant = "bg-blue-500 text-white border-blue-500 fine:hover:bg-blue-700 fine:hover:border-blue-700" %}
+      {% set variant = "bg-blue-500 text-white border-blue-500 fine:hover:bg-blue-700 fine:hover:border-blue-700 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" %}
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-500 border-white fine:hover:border-blue-500 fine:hover:text-blue-600" %}
+      {% set variant = "bg-white text-blue-500 border-white fine:hover:border-blue-500 fine:hover:text-blue-600 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" %}
     {% endif %}
   {% endif %}
 
