--- a/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
+++ b/src/pages/produktoversikt/arbeidsgiver/arbeidsgiver.njk
@@ -1,5 +1,5 @@
 ---
-title: 'Søknad og skjema fra A til Å (arbeidsgiver)'
+title: 'Søknad og skjema fra A til Å'
 description: 'Pengestøtter og tjenester fra NAV for arbeidsgivere. Du kan søke eller filtrere etter type og område.'
 order: 6
 bodyClass: ''
@@ -64,7 +64,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
       });
       updateCount()">
     <div class="grid grid-cols-layout">
-      <div class="relative w-full col-content lg:col-feature">
+      <div class="relative w-full col-content lg:col-popout">
 
         <div class="hidden float-right pb-8 mt-2 ml-24 xs:block sm:pb-0 sm:-mb-8">
           {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[7rem] aspect-square') | safe }}
@@ -77,7 +77,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
     </div>
 
     <div class="grid mt-8 lg:mt-12 grid-cols-layout">
-      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-feature">
+      <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-popout">
 
         <div class="relative lg:row-start-1 lg:row-span-3 lg:col-start-2" x-data="{ filterDrawer: false }">
           <button
@@ -144,7 +144,7 @@ permalink: '/produktoversikt-arbeidsgiver/'
           </button>
 
           <div class="hidden lg:block">
-            <div class="-mt-1">
+            <div class=>
               <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
               <div class="relative mt-1">
                 <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
@@ -173,15 +173,15 @@ permalink: '/produktoversikt-arbeidsgiver/'
             {% for product in products | sort(true, false, 'title') | reverse %}
               <div
                 x-data="{ expanded: false }"
-                class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:-mx-0 sm:px-0 border-deepblue-100"
+                class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
                 x-bind:class="expanded ? '' : ''"
                 x-show="filterItem($el)"
                 data-type="alle {% for item in product.type %}{{ item | slugify }} {% endfor %}"
                 data-area="alle {% for item in product.area %}{{ item | slugify }} {% endfor %}">
 
                 <div
-                  class="relative z-10 flex items-center gap-4 py-4 -my-px text-left px-clamp-gap -mx-clamp-gap sm:-mx-2 sm:px-4 sm:rounded-lg fine:hover:z-20"
-                  x-bind:class="expanded ? ' fine:hover:bg-deepblue-200 bg-deepblue-50' : 'fine:hover:bg-deepblue-200'">
+                  class="relative z-10 flex items-center gap-4 py-5 -my-px text-left rounded sm:rounded px-clamp-gap -mx-clamp-gap sm:px-4 sm:mx-0 ring-2 fine:hover:bg-deepblue-100 focus-within:z-20"
+                  x-bind:class="expanded ? 'bg-deepblue-50 ring-deepblue-400' : 'ring-transparent fine:hover:ring-deepblue-100'">
                   {% if product.icon %}
                     {{ product.icon | svgContents('w-12 h-12 lg:w-14 lg:h-14 shrink-0') | safe }}
                   {% endif %}
@@ -200,13 +200,13 @@ permalink: '/produktoversikt-arbeidsgiver/'
                       {%- endfor -%}
                     </p>
                   </div>
-                  <button x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
-                    <span class="sr-only">Vis/skjul innhold</span>
+                  <button type="button" x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end w-full pr-4 rounded-sm sm:rounded group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800 focus-visible:ring-offset-2 focus-visible:ring-offset-white" aria-expanded="false" x-bind:aria-expanded="expanded">
+                    <span class="sr-only">Vis</span>
                     {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
                   </button>
                 </div>
 
-                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:-mx-2 sm:-mt-2 sm:px-5 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded">
+                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[20vh] markdown bg-deepblue-50 sm:mx-0 sm:-mt-2 sm:px-20 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded" hidden>
                   <p>{{ product.ingress }}</p>
 
                   {% if product.contentBlocks %}
