--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -19,14 +19,8 @@
     <link rel="preload" href="/assets/fonts/SourceSans3-normal-latin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
     {% block styles %}{% endblock %}
-
-    {# <script src="/assets/alpineFocus.min.js" type="text/javascript" defer></script> #}
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {% block script %}{% endblock %}
-
-    {%- if environment === 'production' -%}
-    <script type="text/javascript">(function(u,x,t,w,e,a,k,s){a=function(v){try{u.setItem(t+e,v)}catch(e){}v=JSON.parse(v);for(k=0;k<v.length;k++){s=x.createElement("script");s.text="(function(u,x,t,w,e,a,k){a=u[e]=function(){a.q.push(arguments)};a.q=[];a.t=+new Date;a.c=w;k=x.createElement('script');k.async=1;k.src=t;x.getElementsByTagName('head')[0].appendChild(k)})(window,document,'"+v[k].u+"',"+JSON.stringify(v[k].c)+",'"+v[k].g+"')";x.getElementsByTagName("head")[0].appendChild(s)}};try{k=u.getItem(t+e)}catch(e){}if(k){return a(k)}k=new XMLHttpRequest;k.onreadystatechange=function(){if(k.readyState==4&&k.status==200)a(k.responseText)};k.open("POST",w+e);k.send(x.URL)})(sessionStorage,document,"uxt:","https://api.uxtweak.com/snippet/","d9cb00da-f322-463a-9508-172bb4698de0");</script>
-    {%- endif -%}
   </head>
   <body
     class="min-h-full leading-normal overflow-x-hidden overflow-y-scroll {{ bodyClass }}"
@@ -38,7 +32,7 @@
     }">
     <div class="relative z-10 bg-white" >
     {% include "partials/banner.njk" %}
-    {% include "partials/header.njk" %}
+    {% include "partials/header-new.njk" %}
     {% block content %}{% endblock %}
     {% include "partials/footer.njk" %}
     {% include "partials/prototypeNav.njk" %}
