--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -2,6 +2,7 @@
 
 <header class="relative z-40 grid bg-white isolate grid-cols-layout shadow-border" >
 
+  {# Audience Dropdown #}
   <div class="relative z-10 grid justify-center bg-gray-100 xs:hidden col-full">
     <button class="flex items-center justify-center gap-2 px-4 py-2 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
@@ -46,7 +47,7 @@
         {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
       </button>
       <div class="xs:absolute md:static xs:top-full xs:left-0">
-        <ul class="justify-center overflow-hidden text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
+        <ul class="justify-center text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
           {% for item in audience %}
             <li class="grid">
               <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ 'border-blue-500' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
@@ -59,23 +60,30 @@
     </div>
 
     {# Menu Buttons #}
-    {% set menuButtonClasses = "flex-0 flex-col sm:flex-row items-center justify-center py-2 pl-2.5 pr-3 leading-none font-semibold sm:gap-2.5 text-blue-500 sm:rounded sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800" %}
-
-    <div class="flex items-end gap-0.5 ml-auto py-2 sm:py-4 whitespace-nowrap">
-      <button class="flex {{ menuButtonClasses }}" type="button">
+    {% set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center py-2.5 px-3 leading-none font-semibold sm:gap-1 text-blue-500 sm:rounded md:px-4 sm:text-lg fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800" %}
+    <div class="flex items-end gap-2 ml-auto sm:py-4 md:py-3">
+      <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
         <span class="relative">
-          {{ '/src/_includes/svg/icons/menu.svg' | svgContents('w-6 h-6') | safe }}
+          {{ '/src/_includes/svg/icons/notification.svg' | svgContents('w-7 h-7') | safe }}
+          <span class="absolute block w-2 h-2 bg-red-400 rounded-full top-0 ring-2 ring-red-100/50 -left-1.5"></span>
         </span>
+        <span class="mt-px">Varsel</span>
+      </button>
+      <button class="{{ menuButtonClasses }}" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
+        <template x-if="!menuOpen">
+          {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+        </template>
+        <template x-if="menuOpen">
+          {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+        </template>
         <span class="mt-px">Meny</span>
-      </button>
-      <button class="hidden sm:flex {{ menuButtonClasses }}" type="button">
-          {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6 shrink-0 pointer-events-none') | safe }}
-        <span class="mt-px">Søk</span>
-      </button>
-      <button class="flex {{ menuButtonClasses }}" type="button">
-          {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 shrink-0 pointer-events-none') | safe }}
-        <span class="mt-px">Logg inn</span>
       </button>
     </div>
   </nav>
 </header>
+
+{% include "partials/navigation.njk" %}
+{% include "partials/notifications.njk" %}
+
+{# Overlay #}
+<button class="fixed inset-0 z-30 w-full h-full bg-black/30 " x-bind:class="(menuOpen || notifyOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false"></button>
