--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,26 +1,23 @@
 {# Navigation (Private) #}
 <nav class="relative">
-  <div class="absolute inset-x-0 z-50 grid pt-8 pb-16 bg-white border-t border-gray-200 shadow-xl grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
+  <div class="absolute inset-x-0 z-50 grid pt-8 pb-16 bg-white shadow-xl grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
 
     <div class="col-feature">
-      <div class="grid gap-3 md:gap-6 md:grid-flow-col-dense">
+      <div class="grid gap-3 md:gap-6 md:grid-flow-col-dense md:grid-cols-9 md:grid-rows-[1fr_auto]">
 
-        <div class="grid flex-auto row-start-1 p-4 rounded-lg md:p-6 md:col-start-3 md:row-span-2 bg-deepblue-50 md:-ml-6">
+        {# Min side #}
+        <div class="grid flex-auto row-start-1 p-4 rounded-lg md:p-6 md:col-start-7 md:col-span-3 md:row-span-2 bg-deepblue-50">
           <h3 class="grid">
             <span class="text-sm tracking-wider uppercase opacity-70">Logget inn som</span>
-            <span class="text-2xl font-semibold leading-tight">Fjong Vindelbro</span>
+            <span class="text-2xl font-semibold leading-none">Fjong Vindelbro</span>
           </h3>
 
           <div class="pt-6">
             <ul class="grid gap-2">
               {% for group in menu.user %}
-                {% if loop.index > 1 %}
-                  <li class="my-3 border-t border-deepblue-700/10"></li>
-                {% endif %}
-
                 {% for link in group.linkList %}
-                  <li class="break-inside-avoid">
-                    <a class="inline-flex items-center gap-2 pl-2 pr-4 py-1.5 -mx-2 text-lg leading-normal text-blue-500 no-underline rounded font-semibold fine:hover:bg-blue-800 fine:hover:text-white fine:hover:underline" href="#">
+                  <li class="">
+                    <a class="inline-flex place-items-center gap-2 pl-2 pr-4 py-1.5 -mx-2 text-lg leading-normal text-blue-500 no-underline rounded font-semibold text-center fine:hover:bg-blue-800 fine:hover:text-white fine:hover:underline" href="#">
                       {% if link.icon %}
                         {{ link.icon | svgContents('w-6 h-6 opacity-90') | safe }}
                       {% endif %}
@@ -34,7 +31,8 @@
 
         </div>
 
-        <div class="flex-1 pt-8 md:pt-0 md:pr-4 md:col-start-1 md:row-start-1">
+        {# Områder #}
+        <div class="flex-1 pt-8 md:pt-0 md:pr-4 md:col-start-1 md:col-span-3 md:row-start-1">
           <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.areas.title | safe }}</h3>
           <ul class="grid gap-1 mt-2">
             {% for link in menu.areas.linkList %}
@@ -50,7 +48,8 @@
           </ul>
         </div>
 
-        <div class="flex flex-col pt-8 md:pt-0 md:pr-12 md:col-start-2 md:row-start-1">
+        {# Snarveier #}
+        <div class="flex flex-col pt-8 md:pt-0 md:pr-12 md:col-start-4 md:col-span-3 md:row-start-1">
           <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.shortcuts.title | safe }}</h3>
           <ul class="mt-2">
             {% for link in menu.shortcuts.linkList %}
@@ -66,7 +65,8 @@
           </ul>
         </div>
 
-        <form class="w-full gap-2 pt-8 md:pr-12 md:max-w-4xl md:col-start-1 md:col-end-3">
+        {# Søk #}
+        <form class="w-full gap-2 pt-8 md:pr-12 md:max-w-4xl md:col-start-1 md:col-span-6">
           <label class="text-sm tracking-widest uppercase opacity-70" for="search">Søk</label>
           <div class="flex mt-2">
             <input class="flex-1 p-2 text-lg border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
