--- a/src/pages/tom/tom.njk
+++ b/src/pages/tom/tom.njk
@@ -9,6 +9,6 @@ tags: ['template']
 
 {% block content %}
   <main class="grid py-12 min-h-[36vh] lg:min-h-[48vh] grid-cols-layout items-center">
-    <div class="col-content xl:col-feature leading-none lg:leading-[36vh] text-squishy font-bold text-center uppercase text-gray-700/5">Tom side</div>
+    <div class="font-bold leading-none text-center uppercase col-content xl:col-feature text-squishy text-gray-700/5">Tom side</div>
   </main>
 {% endblock %}
