--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -35,17 +35,17 @@ tags: ['template']
         <div class="w-full max-w-3xl mt-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:pl-6 md:border-l md:border-gray-200">
           <h2 class="text-xl font-semibold">Innhold</h2>
           {% set index = sections.slice(1) %}
-          <ul class="pt-1 pl-5 list-square">
+          <ul class="pt-1">
             {% for item in index %}
-              <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
+              <li class="py-1.5 text-xl"><a class="text-blue-500 underline decoration-blue-300 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
             {% endfor %}
           </ul>
 
           <h2 class="mt-8 text-xl font-semibold">Nyttig å vite</h2>
-          <ul class="pt-1 pl-5 list-square">
-            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Klagerettigheter</a></li>
-            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Lov om barnetrygd</a></li>
-            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Pensjonsopptjening for omsorgsarbeid</a></li>
+          <ul class="pt-1">
+            <li class="py-1.5 text-xl"><a class="text-blue-500 underline decoration-blue-300 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Klagerettigheter</a></li>
+            <li class="py-1.5 text-xl"><a class="text-blue-500 underline decoration-blue-300 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Lov om barnetrygd</a></li>
+            <li class="py-1.5 text-xl"><a class="text-blue-500 underline decoration-blue-300 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Pensjonsopptjening for omsorgsarbeid</a></li>
           </ul>
         </div>
 
